// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with communityId 1`] = `
Object {
  "graphql": Object {
    "query": "
query (
  $id: ID,
  $first: Int,
  $offset: Int,
  $sortBy: String,
  $order: String,
  $subscribed: Boolean,
  $autocomplete: String
) {
  community (id: $id) {
    id
    
communityTopics(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  order: $order,
  subscribed: $subscribed,
  autocomplete: $autocomplete
) {
  hasMore
  total
  items {
    id
    postsTotal
    followersTotal
    isSubscribed
    newPostCount
    topic {
      id
      name
    }
  }
}

  }
}
",
    "variables": Object {
      "autocomplete": "a",
      "first": 7,
      "id": 765,
      "offset": 3,
      "order": "desc",
      "sortBy": "name",
      "subscribed": true,
    },
  },
  "meta": Object {
    "extractModel": "Community",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
  },
  "type": "FETCH_COMMUNITY_TOPICS",
}
`;

exports[`matches snapshot without communityId 1`] = `
Object {
  "graphql": Object {
    "query": "
query ($first: Int, $offset: Int, $subscribed: Boolean, $autocomplete: String) {
  
communityTopics(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  order: $order,
  subscribed: $subscribed,
  autocomplete: $autocomplete
) {
  hasMore
  total
  items {
    id
    postsTotal
    followersTotal
    isSubscribed
    newPostCount
    topic {
      id
      name
    }
  }
}

}
",
    "variables": Object {
      "autocomplete": "",
      "first": 20,
      "id": null,
      "offset": 0,
      "order": "desc",
      "sortBy": undefined,
      "subscribed": false,
    },
  },
  "meta": Object {
    "extractModel": "CommunityTopic",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
  },
  "type": "FETCH_COMMUNITY_TOPICS",
}
`;
